# ChangeLog for dev-lang/entity
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/entity/ChangeLog,v 1.9 2006/11/28 18:08:14 opfer Exp $

  28 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  entity-0.7.2-r1.ebuild:
  moved tcltk USE flag over to separate tk and tcl flags, see bug #17808;
  added trailing slash to HOMEPAGE URI

  17 Nov 2006; Saleem Abdulrasool <compnerd@gentoo.org> entity-0.7.2-r1.ebuild:
  Dropping gnome useflag for gnome-1.x removal

  06 Mar 2006; Lars Weiler <pylon@gentoo.org> -entity-0.7.2.ebuild:
  Removing old versions for CVS maintenance (problems with doubled version in
  Attic).

  13 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> entity-0.7.2-r1.ebuild,
  entity-0.7.2.ebuild:
  Don't assign default to S; header fix

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*entity-0.7.2-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.