@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<longdescription>
-Regina is a Rexx interpreter. Rexx is a programming language that was designed to be easy to use for inexperienced programmers yet powerful enough for experienced users. It is also a language ideally suited as a macro language for other applications.
-</longdescription>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>maintainer-needed@gentoo.org</email>
+		<name>Default assignee for orphaned packages</name>
+	</maintainer>
+	<longdescription lang="en">
+		Regina is a Rexx interpreter. Rexx is a programming language that was
+		designed to be easy to use for inexperienced programmers yet powerful
+		enough for experienced users. It is also a language ideally suited as a
+		macro language for other applications.
+	</longdescription>
 </pkgmetadata>
