@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/entity
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/entity/ChangeLog,v 1.9 2006/11/28 18:08:14 opfer Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/entity/ChangeLog,v 1.10 2008/04/21 17:07:32 phreak Exp $
+
+  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Fix up metadata.xml. If there's no maintainer for the package, the metadata
+  also needs to contain m-needed@g.o.
 
   28 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
   entity-0.7.2-r1.ebuild:
